fixes bottom scrollbar to fit window

--- a/public/css/override.less
+++ b/public/css/override.less
@@ -173,15 +173,12 @@ body div[role=main] .wrapper main section.exhibition .assets .assetlisting ul li
 
 
 body div[role=main] .wrapper main section.exhibition .assets {
-    /*margin-top: 10px;
-    z-index:2;*/
     position: fixed;
     bottom: 0;
-    /* left: 150px; */
     background-color: #FFFFFF;
     z-index: 1;
     overflow: visible;
-    width: 100%;
+    width: 90%;
     height: 160px;
 }
 
